<resources>
    <string name="app_name">FormulaFan</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="choose_your_email">Choose your email</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="register_account">Register Account</string>
    <string name="formulafanlogo">FormulaFanLogo</string>
    <string name="iniciar_sess_o">Iniciar Sessão</string>
    <string name="bem_vindo">Bem Vindo !</string>
    <string name="ou">ou</string>
    <string name="registar">Registar</string>
    <string name="registo_formulafan">Registo FormulaFan</string>
    <string name="o_seu_email">O seu Email</string>
    <string name="a_sua_password">A sua password</string>
    <string name="verificar_password">Verificar password</string>
    <string name="nome_de_utilizador">Nome de utilizador</string>
    <string name="nome">Nome</string>
    <string name="bottom_bar_item_1">Perfil</string>
    <string name="bottom_bar_item_2">Corridas</string>
    <string name="bottom_bar_item_3">Resultados</string>
    <string name="proximas_corridas">Próximas Corridas</string>
    <string name="corridas_anteriores">Corridas Anteriores</string>
    <string name="race">Race</string>
    <string name="seleciona_uma_corrida_para_ver_os_detalhes">Seleciona uma corrida para ver os detalhes!</string>
    <string name="detalhes_corrida">Detalhes da Corrida</string>
    <string name="temporada">Temporada : </string>
    <string name="ronda">Ronda :</string>
    <string name="data">Data da Corrida :</string>
    <string name="circuito">Circuito :</string>
    <string name="toolBarLogOut">Sair</string>
    <string name="username">UserName</string>
    <string name="qi">QI</string>
    <string name="defaultemail_email_com">defaultEmail@email.com</string>
    <string name="_000">000</string>
    <string name="estat_sticas">Estatísticas</string>
    <string name="todo">TODO</string>
    <string name="meus_quizzes">Meus Quizzes</string>
    <string name="quiz">quiz</string>
    <string name="quiz_title">Quiz title</string>
    <string name="pontos">Pontos</string>
    <string name="selecione_um_quiz_para_ver_as_suas_respostas">Selecione um quiz para ver as suas respostas</string>
    <string name="correto_errado">Correto/Errado</string>
    <string name="resposta">Resposta</string>
    <string name="textview">TextView</string>
    <string name="questao">Questao</string>
    <string name="respostaView">Resposta:</string>
    <string name="perfil">Perfil</string>
    <string name="quizz_leaders">Quizz Leaders</string>
    <string name="myqi">MyQI</string>
    <string name="resultados">Resultados</string>
    <string name="pilotos">Pilotos</string>
    <string name="equipas">Equipas</string>
    <string name="posicao">Posição</string>
    <string name="name">Nome : </string>
    <string name="nacionalidade">Nacionalidade :</string>
    <string name="wins">Vitórias : </string>
    <string name="numero">Número :</string>
    <string name="team">Equipa :</string>
    <string name="selecione_um_item_da_lista_para_ver_mais_detalhes">Selecione um item da lista para ver mais detalhes!</string>
    <string name="resposta1">Resposta1</string>
    <string name="resposta2">Resposta2</string>
    <string name="resposta3">Resposta3</string>
    <string name="radiobutton">RadioButton</string>
    <string name="resposta4">Resposta4</string>
    <string name="seguinte">Seguinte</string>
    <string name="formula_fan_service">Serviço do FormulaFan!</string>
    <string name="formula_fan_service_description">Serviço de desafios de FormulaFan</string>
    <string name="no_available_quiz">Não existem desafios disponíveis para esta localização!</string>
    <string name="select_an_option">Escolha uma das opções.</string>
</resources>