<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardCornerRadius="6dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="10dp"
        app:theme="@style/Theme.FormulaFan.MaterialCard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="20">

            <TextView
                android:id="@+id/questionTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:gravity="center_horizontal|center_vertical"
                android:hint="@string/questao" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="12"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="6"
                    android:orientation="horizontal"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/resposta"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/respostaView" />

                    <TextView
                        android:id="@+id/answerTextView"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center_horizontal|center_vertical"
                        android:hint="@string/resposta"
                        android:textAlignment="viewStart" />
                </LinearLayout>

                <TextView
                    android:id="@+id/correctWrongView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/correto_errado"
                    android:textAlignment="viewStart" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>